tests/run/error_redeclare.out
tests/run/error_redeclare.em:5:5: error: redeclaration of a variable in the same scope
